<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

        <!--  Header Starts-->
        <LinearLayout
            android:id="@+id/header"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="60dip"
            android:paddingBottom="20dip">
            <!-- Logo Start-->
            <ImageView android:src="@drawable/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:contentDescription="@string/logo" />
            <!-- Logo Ends -->
        </LinearLayout>
        <!--  Header Ends -->

        <!-- choix type credit -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_below="@id/header">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/choix_loa_credit"
                android:id="@+id/btnLoa" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/choix_leasing"
                android:id="@+id/btnLeasing" />
        </LinearLayout>
        <!-- choix type credit -->

        <!-- logout -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/logout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:layout_below="@id/choice">
            <Button android:id="@+id/btnLogout"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dip"
                android:background="@color/btn_logut"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/logout"/>
        </LinearLayout>
        <!-- logout -->

    </RelativeLayout>
</ScrollView>
